2003-05-15  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment.c (e_msg_composer_attachment_edit):
	Don't connect to the focus-out-event in order to update the
	mime-type. Simply don't update the mime-type ever. Fixes bug
	#42798.

2003-04-28  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (autosave_manager_query_load_orphans): Change
	the "would you like to recover unsaved drafts?" dialog a QUESTION
	dialog rather than an ERROR dialog. Fixes bug #42024.

2003-04-25  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment-bar.c (pixbuf_for_mime_type): If we
	fail to load the icon that gnome_vfs_get_icon() gave us, the
	default back to gnome-unknown.png. This is the only POSSIBLE way
	for Anna to be getting a NULL pixbuf if she has gnome-unknown.png
	that I can see. Should fix bug #41513.

2003-04-23  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer.c (map_default_cb): removed debug printfs.

2003-04-22  Radek Doulik  <rodo@ximian.com>

	* e-msg-composer.c (add_attachments_handle_mime_part): added
	related argument, TRUE means that container of mime_part is
	multipart/related
	(add_attachments_handle_mime_part): add images as inline when
	related is TRUE
	(add_attachments_from_multipart): pass related to
	add_attachments_handle_mime_part

2003-04-21  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (add_attachments_handle_mime_part): Don't ever
	attach non-inlined text or message parts. Reverts a prior fix.

2003-04-21  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment.glade: Change the order of the
	ok/cancel buttons.

2003-04-19  Chris Toshok  <toshok@ximian.com>

	[ fixes #40694 ]
	* e-msg-composer-hdrs.c (create_addressbook_entry): this can't
	hurt - set the frame to autoactivate so if by some chance the
	widget is focused the control will end up being activated.

	* e-msg-composer.c (map_default_cb): activate the To: control
	instead of focusing the widget.

2003-04-18  Rodney Dawes  <dobey@ximian.com>
